# text-theme-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  idea.txt  pyproject.toml
.github/workflows/: secret-scan.yml  test.yml
docs/: FOLLOW_UP.md
scripts/: make_sample_notes.py
scripts/sample_notes/: 2024-08-12-agent-design---what-i-keep-coming-back-to.md  2024-08-21-another-crypto-grift-noted.md  2024-09-15-the-newsletter-grift.md  2024-11-03-workflow-tooling---brain-dump.md  2024-11-04-the-grifter-resume.md  2025-01-08-i-want-total-freedom-to-follow-curiosity.md  2025-02-18-training-log---february.md  2025-03-14-i-need-hard-external-deadlines-or-nothing-ships.md  2025-04-11-signal-lost---the-design-of-a-quiet-game.md  2025-05-09-going-back-to-physical-notes.md  2025-06-22-career-pivot-third-one-this-year.md  2025-08-30-sleep-is-the-whole-game.md  2025-10-05-why-i-keep-coming-back-to-quiet-games.md  2026-01-17-cds-tapes-and-the-weight-of-a-thing.md  2026-04-02-ai-agency---how-to-actually-price-it.md  2026-04-09-the-agent-loop-redrawn.md  2026-04-15-workflow-bottleneck-is-always-me.md  2026-04-21-agent-rollout---lessons-from-last-week.md  (+1 more)
src/text_theme_analyzer/: __init__.py  (+3 more)
tests/: test_cli_glob_recovery.py  test_config_precedence.py  test_diff_dashboard.py  test_history.py  test_keywords_zero_dep.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_t11_tag_weighted.py  test_t11b_per_tag_weights.py  test_t12_promote.py  test_t12a_target_section.py  test_t21_require_dates.py  test_t22_run_all.py  test_t23_cluster_naming.py
(+33 files in other folders)
