[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-theme-analyzer"
version = "0.1.0"
description = "A private thinking radar for your notes: surfaces recurring themes, clusters, tensions, strong quotes, and stale-but-recurring ideas."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stefan" }]

dependencies = [
  "click>=8.1.7",
  "rich>=13.7.0",
  "python-frontmatter>=1.1.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.1",
  "keybert>=0.8.5",
  "sentence-transformers>=3.0.1",
  "bertopic>=0.16.2",
  "hdbscan>=0.8.33",
  "umap-learn>=0.5.6",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.0",
  "jinja2>=3.1.4",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
text-analyzer = "text_theme_analyzer.cli:main"
tta = "text_theme_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
